--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -13,6 +13,10 @@ jobs:
           npm install
           npm run build
 
+      - name: Copy static assets
+        run: |
+          cp -R ./assets ./documentation/assets
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
